<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Voxtab</string>
    <string name="loading_content">Downloading Content...</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="progress_notification">Voxtab Mobile Recording..</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="membership_id">Membership ID</string>
    <string name="no_connection">Your internet connection is not active, Please try again</string>
    <string name="validation_login">Please enter valid credentials</string>
    <string name="validation_password">Entered password is wrong</string>
    <string name="notifications">Notifications</string>
    <string name="myrecordings">My Recordings</string>
    <string name="myorderhistory">My Order History</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="aboutus">About Us</string>
    <string name="send_to">Share Transcription</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="app_close_msg">Do you wish to close this app ?</string>
    <string name="no_content">No active internet connection available, please try later </string>
    <string name="start_recording">Start Recording</string>
    <string name="upload_audio">Upload audio</string>
    <string name="add_audio">Add Audio</string>
    <string name="free_memory_msg1">You can record approx.</string>
    <string name="free_memory_msg2">with your available phone memory.</string>
    <string name="revschedule">Reviced Delivery Schedule</string>
    <string name="file_record_msg">Let me record my entire file.</string>
    <string name="file_save_msg">Let me save the file</string>
    <string name="recording_time">Recording time</string>
    <string name="time_format">00:00:00</string>
    <string name="btn_proceed_order">Proceed to Order</string>
    <string name="select_file">Please Select File</string>
    <string name="single_file">Please select a single file</string>
    <string name="no_recordings_msg">You don\'t have any recordings</string>
    <string name="file_size">Selected file size is zero</string>
    <string name="download_file">Downloading file. Please wait...</string>
    <string name="login_to_proceed">Login to Proceed</string>
    <string name="login_msg">Get your audio transcribed by native English speakers who are experts in your subject </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember me</string>
    <string name="order_comp">Your order has been completed</string>
    <string name="total_duration">Total Duration</string>
    <string name="duration">Duration</string>
    <string name="total_fee">Total Fee</string>
    <string name="delivery_date_time">Del. Time &amp; Date</string>
    <string name="change">Change</string>
    <string name="select_service_details">Select Service Details</string>
    <string name="free_services">Free Services</string>
    <string name="subject_of_file">Subject of the file</string>
    <string name="instructions_for_order">Instructions for Order</string>
    <string name="selected_files">Selected Files</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="turn_wifi_on">Turn WiFi on</string>
    <string name="continue_btn">Continue</string>
    <string name="wifi_msg">You are currently using your mobile internet, do you want to turn WiFi on?</string>
    <string name="review_order">Review Order</string>
    <string name="review_hint">The delivery date and time is subjected to your file being uploaded by</string>
    <string name="complete_order">Complete Order</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="review_msg">Please review the details of your order</string>
    <string name="thank_you">THANK YOU!</string>
    <string name="thank_note">Your Order with \n Assignment Number ASS_NO  \n is now confirmed !</string>
    <string name="cancel_alert">Do you want to cancel this order ?</string>
    <string name="edit_alert">Do you want to edit this order ?</string>
    <string name="revised_delivery_schedule">Revised Delivery Schedule</string>
    <string name="assignment_no">Assignment No</string>
    <string name="confirm">Confirm</string>
    <string name="order_details">Order Details</string>
    <string name="back">Back</string>
    <string name="conf">Conform</string>
    <string name="view_order_details"><u>View Order Details</u></string>
    <string name="order_history">Order History</string>
    <string name="download_transcription"><u>Download Transcription</u></string>
    <string name="file_details">File Details</string>
    <string name="services_type">Services Type</string>
    <string name="delivery_option">Delivery Option</string>
    <string name="value_addded_services">Value Added Services</string>
    <string name="time_stamps">Timestamps</string>
    <string name="delete_alert_msg">Do you want to delete this file ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_filename_msg">Enter file name</string>
    <string name="descr_hint">Enter recording description here..</string>
    <string name="discard">Discard</string>
    <string name="ok">Ok</string>
    <string name="recording">Recording_</string>
    <string name="stop_alert_msg">Do you want to stop recording ?</string>
    <string name="file_name">File Name</string>
    <string name="file_descr">File Descripton</string>
    <string name="date_time">Date and Time</string>
    <string name="status">Status</string>
    <string name="button_start_record">Start</string>
    <string name="button_pause_record">Pause</string>
    <string name="button_play_record">Play</string>
    <string name="error_audio_recorder">Audio recorder error: %1$s</string>
    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
    <string name="error_no_permissions">The recorder requires `RECORD_AUDIO` and `WRITE_EXTERNAL_STORAGE` permissions.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Upload_complete"> Upload complete</string>
    <string name="Uploaded">Uploaded</string>
    <string name="uploading_files">Uploading Audio</string>
    <string name="uploading_in_progress">Uploding in progress</string>
    <string name="uploading_Failed"> Audio Upload Failed</string>
    <string name="account_settings">Account Settings</string>
    <string name="notification_settings">Notifications Settings</string>
    <string name="memory_settings">Memory Settings</string>
    <string name="data_usage_settings">Data Usage &amp; uploads Settings</string>
    <string name="old_pass">Enter old password</string>
    <string name="new_pass">Enter New password</string>
    <string name="re_pass">Re-Enter New password</string>
    <string name="change_pass">Change Password</string>
    <string name="profile">My Profile</string>
    <string name="name">Name</string>
    <string name="organization">Organization</string>
    <string name="email">E-mail</string>
    <string name="contact">Contact</string>
    <string name="profile_img">Profile Image</string>
    <string name="browse">Browse</string>
    <string name="send_all_noti">Send all Notifications</string>
    <string name="mute_all_noti">Mute all Notifications</string>
    <string name="notify_deli">Notify only Deliveries</string>
    <string name="save_phone">Save to Phone memory</string>
    <string name="save_ext">Save to External</string>
    <string name="record_review_upload">Record, Review &amp; Upload</string>
    <string name="upload_wifi">Upload Using WiFi only</string>
    <string name="upload_network">Upload Using Network only</string>
    <string name="upload_anytime">Upload Anytime</string>
    <string name="ask_upload">Ask before Uploading</string>
    <string name="upload_while_record">Upload While I Record</string>
    <string name="login_feature">Login to use this Feature</string>
    <string name="order_placed">Order Placed</string>
    <string name="audio_uploaded">Audio Uploaded</string>
    <string name="delivered">Delivered</string>
    <string name="share">Share</string>
    <string name="order_complete_msg">Your Order has been completed.</string>
    <string name="progress_note">Your batchwise delivery is in progress. \n You have received count files \n Final Delivery date is </string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="feedback_note">Please select order or assignment number</string>
    <string name="feed_note">Please type your  feedback below</string>
    <string name="feed_hint">Enter your Message</string>
    <string name="send">Send</string>
    <string name="order_feedback">Order Feedback</string>
    <string name="app_feedback">App Feedback</string>
    <string name="click_here">Click here to view</string>
    <string name="ask_before"> Wi-Fi or Network Connection ? </string>
    <string name="wifi">Wi-Fi</string>
    <string name="network_connection">Network Connection</string>
    <string name="data_error">Data not available on server</string>
    <string name="ext_storage">extstorage</string>
    <string name="login_alert">Please Login first</string>
    <string name="view_all">View all notifications</string>
    <string name="ERR_CONNECTION">No internet connection</string>
    <string name="no_discount">No Discount</string>
    <string name="no_notifications">No notifications available</string>
    <string name="login">Login</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="thank_you_feedback"> Thank you for your feedback </string>
    <string name="thank_note_feedback"> Our team will shortly get in touch with you. </string>
    <string name="feedback_back"> Click here to go back to Home </string>
</resources>