<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <group
        android:id="@+id/grp_menus5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
    </group>


    <group
        android:id="@+id/grp_menus2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recordings"
            android:checkable="true"
            android:icon="@drawable/my_recordings_icon"
            android:title="@string/myrecordings" />
    </group>
    <group
        android:id="@+id/grp_menus3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order_history"
            android:checkable="true"
            android:icon="@drawable/my_orderhistory_icon"
            android:title="@string/myorderhistory" />
    </group>



    <group
        android:id="@+id/grp_menus1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_notifications"
            android:checkable="true"
            android:icon="@drawable/notifications_icon"
            android:title="@string/notifications" />
    </group>

    <group
        android:id="@+id/grp_menus4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:checkable="true"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/grp_menus6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:checkable="true"
            android:icon="@drawable/help_icon"
            android:title="@string/help" />
    </group>
   <!-- <group
        android:id="@+id/grp_menus7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_confidentiality"
            android:checkable="true"
            android:icon="@drawable/confidentiality_icon"
            android:title="@string/confidentiality" />
    </group>
    <group
        android:id="@+id/grp_menus8"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_terms_condition"
            android:checkable="true"
            android:icon="@drawable/terms_icon"
            android:title="@string/terms_conditions" />
    </group>-->
    <group
        android:id="@+id/grp_menus9"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:checkable="true"
            android:icon="@drawable/aboutus_icon"
            android:title="@string/aboutus" />

    </group>

   <!-- <group
        android:id="@+id/grp_menus10"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:checkable="true"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />
    </group>
-->
    <group
        android:id="@+id/grp_menus11"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:checkable="true"
            android:icon="@drawable/feedback_icon"
            android:title="@string/feedback" />

    </group>

</menu>

