<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="248dp"
    android:layout_height="128dp"
    android:layout_gravity="center"
    android:background="@drawable/alert_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_dia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/wifi_msg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/btn_txt_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="248dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/button_line"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <TextView
            android:id="@+id/btn_turn_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/btn_txt_size" />

        <TextView
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:clickable="true"
            android:text="@string/continue_btn"
            android:textColor="@android:color/black"
            android:textSize="@dimen/btn_txt_size" />
    </LinearLayout>

</LinearLayout>