<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="58dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="top|center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/thank_icon" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/thank_you_feedback"
            android:textSize="18dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/thank_note_feedback"
            android:textSize="16dp"
            android:id="@+id/textViewThanksMsg"/>


        <TextView
            android:id="@+id/txt_goto_order_history"
            android:layout_width="298dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/selected_file_bg"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/feedback_back"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/btn_txt_size" />

    </LinearLayout>

</LinearLayout>